# BSSAS

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  FileManagement_recovered.qml  README.md  Setup.iss  SignalProcessing_recovered.qml  bowel_sound_ui_qml_spec.md
3D_Resources/: 3D model of abdomen.glb
App/: DebugTerminalManager.cpp  DebugTerminalManager.h  app_icon.rc.in  environment.h  main.cpp  updater_main.cpp
BSSAS/: CMakeLists.txt  Constants.qml  ResponsiveLayoutPlan.md  Theme.qml  qmldir
BSSASContent/: App.qml  AppState.qml  CMakeLists.txt  Left_Toolbar.qml  MainWindow_Background.qml  Right_Top_Toolbar.qml  SettingsSidebar.qml  UpdateDialog.qml  Window_Display_Master_Control.qml
BSSASContent/components/: AdaptiveNoiseReductionConfigPopup.qml  BlurGlass.qml  CheckBoxes.qml  ColumnTabBar.qml  DataVisualizationGraphCartesianSpectrum.qml  DateSelection.qml  DirectionAwareHoverCard.qml  OSDataVisualizationGraphCartesianWaveform.qml  ProgressIndicator.qml  RTDataVisualizationGraphCartesianWaveform.qml  RadioButton.qml  ScientificFilterConfigPopup.qml  ScientificFilterResponseGraph.qml  Select.qml  StandbyAnimation.qml  TextFields.qml  ThemedButton.qml  TimeFrequencyAnalysisReport.qml  TimeSelection.qml  ToastNotification.qml  ToggleSwitch.qml
BSSASContent/display_content/: About.qml  About_Page.qml  Auxiliary_Diagnosis.qml  Home.qml  Home_Page.qml  Medical_Record_Management.qml  Software_Master_Control.qml  Temporal_Spectral_Monitoring.qml
BSSASContent/display_content/software_master_control_content/: DAQ_Device_Console.qml  File_Management.qml  Sensor_Monitoring.qml  Signal_Processing_Settings.qml
BackendCore/: CMakeLists.txt  README.md
BackendCore/DataBase/: DatabaseManager.cpp  DatabaseManager.h
BackendCore/Header_Files/: ActiveNoiseCancellation.h  AdaptiveDownsampling.h  AdaptiveNoiseReduction.h  DaqDeviceManager.h  DataManager.h  DatabaseStoragePaths.h  FractalDimensionUtils.h  GenerateManager.h  JointExportManager.h  KfrDftUtils.h  LocalizationIntestinalSound.h  MotionArtifactReduction.h  Multi_featureJointDetection.h  RealtimeAudioMonitor.h  RecognitionServiceManager.h  SignalDFTCalculation.h  SignalPreprocessing.h  SystemStatusMonitor.h  TransientNoiseSuppressor.h  UpdateManager.h  Usb_Daq4203.h  WAVHandle.h  WaveletTransform.h
BackendCore/PeripheralDrivers/UsbDaq4203/: Usb_Daq4203.lib
BackendCore/Source_Files/: ActiveNoiseCancellation.cpp  AdaptiveDownsampling.cpp  AdaptiveNoiseReduction.cpp  DaqDeviceManager.cpp  DataManager.cpp  FractalDimensionUtils.cpp  GenerateManager.cpp  JointExportManager.cpp  KfrDftUtils.cpp  LocalizationIntestinalSound.cpp  MotionArtifactReduction.cpp  Multi_featureJointDetection.cpp  RealtimeAudioMonitor.cpp  RecognitionServiceManager.cpp  SignalDFTCalculation.cpp  SignalPreprocessing.cpp  SystemStatusMonitor.cpp  TransientNoiseSuppressor.cpp  UpdateManager.cpp  WAVHandle.cpp  WaveletTransform.cpp
Generate/DataChunk/: AFDROIS.json  ISAR.json
Generate/Example/: AFDROIS.html  ISAR.html
Generate/Report/: AFDROIS.html  ISAR.html
PythonModules/: README.md
PythonModules/Runtime/: Fetch-EmbeddedPython.ps1  README.md
PythonModules/Runtime/Python-3.14.3-embed-amd64/: python314._pth
PythonModules/Scripts/: PDFExport.py  WAVExport.py  WAVImport.py  shared_paths.py
cmake/: BSSASHelpers.cmake  BuildDistribution.cmake  insight.cmake
kfr-windows-x86_64/include/kfr/: config.h
kfr-windows-x86_64/lib/: FLAC.lib  kfr_audio.lib  kfr_dft.lib  kfr_dft_avx.lib  kfr_dft_avx2.lib  kfr_dft_avx512.lib  kfr_dft_sse41.lib  kfr_dsp.lib  kfr_dsp_avx.lib  kfr_dsp_avx2.lib  kfr_dsp_avx512.lib  kfr_dsp_sse41.lib  kfr_io.lib  ogg.lib
kfr-windows-x86_64/lib/cmake/kfr/: KFRConfig.cmake  KFRTargets-debug.cmake  KFRTargets-release.cmake  KFRTargets.cmake
kfr-windows-x86_64/lib/debug/: FLAC.lib  kfr_capi.lib  kfr_io.lib  ogg.lib
webrtc-install/lib/: webrtc-audio-processing-2.lib
webrtc-install/lib/pkgconfig/: webrtc-audio-processing-2.pc
